Agregando modelo para almacenar resultados
