# server/api/controllers/election/electionController.js
@@ -1,8 +1,12 @@
 import Option  from '../../models/option.model';
 import Election from '../../models/election.model';
+import Result from '../../models/result.model';
 
 export class ElectionController {
 
+    /**
+     * Get every option stored in the database
+     */
     getOptions(req, res) {
         Option.find(function(err, options) {
             if (err) {
@@ -14,15 +18,18 @@ export class ElectionController {
         })
     }
 
+    /**
+     * Get the results from the election
+     */
     getResults(req, res) {
-        Election.findById(req.params.electionId, function(err, election) {
-            if(err) {
+        Result.find(function(err, results) {
+            if (err) {
                 res.send(err);
             }
-            else {
-                res.send(election.results);
+            else {
+                res.send(results);
             }
-        })
+        });
     }
 }
 
