# server/api/controllers/election/electionRouter.js
@@ -4,4 +4,4 @@ import controller from './electionController';
 export default express
     .Router()
     .get('/getOptions', controller.getOptions)
-    .get('/getResults/:electionId', controller.getResults)
+    .get('/getResults', controller.getResults)
